fix dark mode button colors

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -178,6 +178,18 @@ body {
   border-color: #005a9c;
 }
 
+[data-dark-mode] body .btn-primary {
+  color: #fff !important;
+  background-color: #005a9c;
+  border-color: #005a9c;
+}
+
+
+[data-dark-mode] body .btn-primary:hover {
+  background-color: #4a266b;
+  border-color: #4a266b;
+}
+
 a {
   color: #005a9c;
 }
